hub/manifests/pop/05-middlewares.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
  namespace: pop
spec:
  stripPrefix:
    prefixes:
      - /config-provider
      - /check
