hub/manifests/pop/03-traefikee.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "traefikee-gslb-ctrl-svc"
  namespace: pop
  labels:
    k8s-app: traefikee
    release: "traefikee-gslb"
spec:
  selector:
    k8s-app: traefikee
    release: "traefikee-gslb"
    component: controllers
  clusterIP: None
  publishNotReadyAddresses: true

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: "traefikee-gslb-controller"
  namespace: pop
  labels:
    k8s-app: traefikee
    app: traefikee
    release: "traefikee-gslb"
spec:
  selector:
    matchLabels:
      k8s-app: traefikee
      app: traefikee
      release: "traefikee-gslb"
      component: controllers
  podManagementPolicy: Parallel
  serviceName: "traefikee-gslb-ctrl-svc"
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: traefikee
        app: traefikee
        release: "traefikee-gslb"
        component: controllers
    spec:
      imagePullSecrets:
        - name: gcr-access-token
      serviceAccountName: "traefikee-gslb-svc-acc"
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: component
                      operator: In
                      values:
                        - controllers
                topologyKey: "kubernetes.io/hostname"
      terminationGracePeriodSeconds: 30
      containers:
        - name: "traefikee-gslb-controller"
          image: gcr.io/traefiklabs/enterprise:hub-fork
          imagePullPolicy: IfNotPresent
          securityContext:
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          ports:
            - containerPort: 4242
              name: control-port
            - containerPort: 8080
              name: api
          readinessProbe:
            tcpSocket:
              port: control-port
            initialDelaySeconds: 10
            periodSeconds: 5
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "4Gi"
              cpu: "1000m"
          volumeMounts:
            - name: data
              mountPath: /var/lib/traefikee
            - name: sockets
              mountPath: /var/run/traefikee
            - name: staticconfig
              mountPath: /var/run/traefikee/config
          command:
            - "/traefikee"
            - "controller"
            - "--name=$(POD_NAME)"
            - "--advertise=$(POD_NAME).traefikee-gslb-ctrl-svc.$(POD_NAMESPACE):4242"
            - "--discovery.dns.bootstrapexpected=1"
            - "--discovery.dns.domain=traefikee-gslb-ctrl-svc.$(POD_NAMESPACE)"
            - "--jointoken.kubernetes.prefix=traefikee-gslb"
            - "--jointoken.kubernetes.namespace=pop"
            - "--license=$(LICENSE)"
            - "--api.autocerts"
            - "--configFile=/var/run/traefikee/config/static.toml"
            - "--log.level="
            - "--log.filepath="
            - "--log.format="
      volumes:
        - name: sockets
          emptyDir: {}
        - name: staticconfig
          configMap:
            name: traefikee-static-config
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        storageClassName: local-path
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Mi

---
apiVersion: v1
kind: Service
metadata:
  name: "traefikee-gslb-proxy-svc"
  namespace: pop
  labels:
    k8s-app: traefikee
    app: traefikee
    release: "traefikee-gslb"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: web
    - name: https
      port: 443
      targetPort: websecure
    - name: prometheus
      port: 9090
      targetPort: prometheus
    - name: api
      port: 8081
  selector:
    k8s-app: traefikee
    release: "traefikee-gslb"
    component: proxies

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "traefikee-gslb-proxy"
  namespace: pop
  labels:
    k8s-app: traefikee
    release: "traefikee-gslb"
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: traefikee
      release: "traefikee-gslb"
      component: proxies
  template:
    metadata:
      labels:
        k8s-app: traefikee
        release: "traefikee-gslb"
        component: proxies
    spec:
      imagePullSecrets:
        - name: gcr-access-token
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: component
                      operator: In
                      values:
                        - proxies
                topologyKey: "kubernetes.io/hostname"
      terminationGracePeriodSeconds: 30
      automountServiceAccountToken: false
      containers:
        - name: "traefikee-gslb-proxy"
          image: gcr.io/traefiklabs/enterprise:hub-fork
          imagePullPolicy: IfNotPresent
          securityContext:
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          ports:
            - containerPort: 9090
              name: prometheus
            - containerPort: 80
              name: web
            - containerPort: 443
              name: websecure
          # readinessProbe:
          #   tcpSocket:
          #     port: http
          #   initialDelaySeconds: 2
          #   periodSeconds: 5
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "4Gi"
              cpu: "1000m"
          volumeMounts:
            - name: "traefikee-gslb-proxy-data"
              mountPath: "/var/lib/traefikee"
            - name: "join-token"
              mountPath: "/var/run/secrets"
          command:
            - "/traefikee"
            - "proxy"
            - "--role=ingress"
            - "--name=$(POD_NAME)"
            - "--discovery.dns.domain=traefikee-gslb-ctrl-svc.$(POD_NAMESPACE)"
            - "--jointoken.file.path=/var/run/secrets"
            - "--log.level="
            - "--log.filepath="
            - "--log.format="
      volumes:
        - name: "traefikee-gslb-proxy-data"
          emptyDir: {}
        - name: "join-token"
          secret:
            secretName: "traefikee-gslb-tokens"
