hub/manifests/pop/02-hub-config-provider.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub-config-provider
  namespace: pop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hub-config-provider
  template:
    metadata:
      labels:
        app: hub-config-provider
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      imagePullSecrets:
        - name: gcr-access-token
      containers:
        - name: hub-config-provider
          image: gcr.io/traefiklabs/hub-gslb:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              port: 80
              path: /live
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          readinessProbe:
            httpGet:
              port: 80
              path: /ready
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          args:
            - serveconfig
            - --addr=:80
            - --mongodb-uri=mongodb://root:admin@mongodb.mongo.svc.cluster.local:27017/gslb?authSource=admin
---
apiVersion: v1
kind: Service
metadata:
  name: hub-config-provider
  namespace: pop
  labels:
    app: hub-config-provider
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: hub-config-provider
    - port: 40000
      targetPort: 40000
      name: hub-config-provider-debug
  selector:
    app: hub-config-provider

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: config-provider-internal-tls
  namespace: pop
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/config-provider/internal`)
      services:
        - name: hub-config-provider
          port: 80
      middlewares:
        - name: stripprefix
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: config-provider-internal
  namespace: pop
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/config-provider/internal`)
      services:
        - name: hub-config-provider
          port: 80
      middlewares:
        - name: stripprefix
